# Lumi-AI

./: README.md  index.html  package.json  vite.config.ts
.github/workflows/: build-linux.yml  build-windows.yml  release.yml
src/: App.css  App.tsx  markdown-theme.css  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: android.json  default.json
src-tauri/src/: lib.rs
src/components/: ChatView.css  ChatView.tsx  LoginScreen.css  LoginScreen.tsx  Sidebar.css  Sidebar.tsx  chat-constants.ts
src/lib/: markdown.ts  material-web.ts  platform.ts
src/lib/api/: gemini.ts  types.ts
src/lib/auth/: apikey.ts  constants.ts  oauth.ts  token.ts
src/lib/db/: index.ts
src/lib/stores/: auth.ts  chat.ts  custom-instructions.ts  thinking.ts
src/types/: material-web.d.ts
