[package]
name = "lumi-ai"
version = "3.5.0"
description = "A friendly, human-like AI chatbot powered by Gemini"
authors = ["iamlooper"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lumi_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-http = "2.5.7"
tauri-plugin-fs = "2.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[target.'cfg(target_os = "android")'.dependencies]
# Uses MediaStore API for public directory writes -- required because std::fs
# is blocked by Android scoped storage enforcement (API 29+). The
# legacy_storage_permission feature compiles in runtime permission request
# support for API 24-28 (Android 7-9).
tauri-plugin-android-fs = { version = "=28.1.0", features = ["legacy_storage_permission"] }

